--- a/package.json
+++ b/package.json
@@ -1,24 +1,25 @@
 {
-  "name": "flowbuilder",
-  "version": "1.0.0",
+  "name": "@tspielhoelle/flowbuilder",
+  "version": "1.0.2",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rm -rf dist && NODE_ENV=production babel src --out-dir dist --copy-files"
   },
-  "author": "",
+  "author": "Thomas Kuhnert",
+  "private": false,
   "license": "ISC",
   "devDependencies": {
     "@babel/cli": "^7.14.8",
     "@babel/core": "^7.15.0",
-    "@babel/preset-env": "^7.15.0"
-  },
-  "dependencies": {
-    "@babel/polyfill": "^7.12.1"
+    "@babel/preset-env": "^7.14.5",
+    "@babel/preset-react": "^7.14.5"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/spielhoelle/flowbuilder.git"
+  },
+  "dependencies": {
+    "@babel/polyfill": "^7.12.1"
   }
 }
